--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+# vscode folder
+.vscode
+
 # Git repo deepfake model
 Ethical-Hacking/lab04-phising/first-order-model
 
 # Connect4 pycache
 FAI/__pycache__
+
+# Virtual environmnet 
+.venv
