update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 # vscode folder
 .vscode
 
+# Python Virtual environmnet 
+.venv
+
 # Git repo deepfake model
 Ethical-Hacking/lab04-phising/first-order-model
 
 # Connect4 pycache
 FAI/__pycache__
 
-# Virtual environmnet 
-.venv
+# redis cluster server stuffs
+NRDS/lab3-redis/
